--- a/mao-na-massa-curso-1/style-aula-3.css
+++ b/mao-na-massa-curso-1/style-aula-3.css
@@ -30,3 +30,24 @@ p {
 .urgente {
     color: red;
 }
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+}
+
+.container2 {
+    display: flex;
+    align-items: center;
+    height: 300px; /* Altura ajustável conforme necessário */
+}
+
+.responsivo-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+  
