--- a/mao-na-massa-curso-1/style-aula-3.css
+++ b/mao-na-massa-curso-1/style-aula-3.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -8,8 +10,10 @@ body {
     color: #941C2F;
 }
 
-.titulo-blog {
+.apresentacao__conteudo__titulo {
     color: #531CB3;
+    font-size: 36px;
+    font-family: 'Krona One', sans-serif;
 }
 
 h2 {
@@ -37,17 +41,14 @@ p {
     align-items: center;
     height: 100vh;
     width: 100%;
+    margin: 10%;
 }
 
-.container2 {
-    display: flex;
-    align-items: center;
-    height: 300px; /* Altura ajustável conforme necessário */
+.apresentacao__conteudo {
+    width: 615px;
 }
 
-.responsivo-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+.apresentacao__conteudo__texto {
+    font-size: 24px;
+    font-family: 'Montserrat', sans-serif;
 }
-  
