--- a/mao-na-massa-curso-1/style-aula-3.css
+++ b/mao-na-massa-curso-1/style-aula-3.css
@@ -55,18 +55,28 @@ p {
 
 .apresentacao__links {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
+    align-items: center;
+    gap: 32px;
 }
 
-.apresentacao__links__botoes {
-    background-color: #52FFB8;
+.apresentacao__links__subtitulo {
+    font-family: 'Krona One', sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+}
+
+.apresentacao__links__link {
+    /* background-color: #52FFB8; */
+    border: 2px solid #52FFB8;
     text-decoration: none;
     font-size: 24px;
-    width: 280px;
+    width: 378px;
     text-align: center;
-    border-radius: 16px;
+    border-radius: 8px;
     padding: 21.5px 0;
-    color: #000000;
+    color: #B7B6C2;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
 }
