--- a/mao-na-massa/styles/style-testes.css
+++ b/mao-na-massa/styles/style-testes.css
@@ -6,33 +6,71 @@
 }
 
 body {
-    /* height: 100vh; */
-    box-sizing: border-box;
-    background-color: #000000;
-    color: #F6F6F6;
+    background-color: #03191E;
+    color: #941C2F;
 }
 
-.titulo-destaque {
-    color: #22D4FD;
+.cabecalho {
+    display: flex;
+    align-items: center;
+    gap: 36px;
+    margin: 2%;
+}
+
+.cabecalho__menu {
+    display: flex;
+    gap: 36px;
+    padding: 2%;
+}
+
+.cabecalho__menu__link {
+    text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    color: #B7B6C2;
+}
+
+.cabecalho__menu__link:hover {
+    color: cornflowerblue;
+}
+
+.apresentacao__conteudo__titulo {
+    color: #531CB3;
+    font-size: 36px;
+    font-family: 'Krona One', sans-serif;
+}
+
+h2 {
+    color: #52FFB8;
+}
+
+p {
+    color: #B7B6C2;
+    margin: 10px;
+    border: 2px solid black;
+    padding: 15%;
+}
+
+.texto-destaque {
+    color: #688B58;
+}
+
+.urgente {
+    color: red;
 }
 
 .apresentacao {
-    padding: 8% 15%;
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+    /* height: 100vh; */
+    width: 100%;
+    padding: 6%;
 }
 
 .apresentacao__conteudo {
     width: 615px;
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-}
-
-.apresentacao__conteudo__titulo {
-    font-size: 36px;
-    font-family: 'Krona One', sans-serif;
 }
 
 .apresentacao__conteudo__texto {
@@ -55,30 +93,32 @@ body {
 }
 
 .apresentacao__links__link {
-    /* background-color: #22D4FD; */
+    /* background-color: #52FFB8; */
     display: flex;
     justify-content: center;
     gap: 16px;
-    border: 2px solid #22D4FD;
+    border: 2px solid #52FFB8;
+    text-decoration: none;
+    font-size: 24px;
     width: 378px;
     text-align: center;
     border-radius: 8px;
-    font-size: 24px;
-    font-weight: 600;
     padding: 21.5px 0;
-    text-decoration: none;
-    color: #F6F6F6;
+    color: #B7B6C2;
     font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
 }
 
 .apresentacao__links__link:hover {
+    border: 2px solid #0000FF;
     background-color: #272727;
+    cursor: pointer;
 }
 
-.rodape {
+.rodape__texto {
     padding: 24px;
-    color: #000000;
     background-color: #22D4FD;
+    color: #000000;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     font-size: 24px;
