--- a/portfolio/styles/style.css
+++ b/portfolio/styles/style.css
@@ -6,71 +6,50 @@
 }
 
 body {
-    background-color: #03191E;
-    color: #941C2F;
+    /* height: 100vh; */
+    box-sizing: border-box;
+    background-color: #000000;
+    color: #F6F6F6;
 }
 
 .cabecalho {
-    display: flex;
-    align-items: center;
-    gap: 36px;
-    margin: 2%;
+    padding: 2% 0% 0% 15%;
 }
 
 .cabecalho__menu {
     display: flex;
-    gap: 36px;
-    padding: 2%;
+    gap: 80px;
 }
 
 .cabecalho__menu__link {
-    text-decoration: none;
     font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 600;
-    color: #B7B6C2;
-}
-
-.cabecalho__menu__link:hover {
-    color: cornflowerblue;
-}
-
-.apresentacao__conteudo__titulo {
-    color: #531CB3;
-    font-size: 36px;
-    font-family: 'Krona One', sans-serif;
-}
-
-h2 {
-    color: #52FFB8;
-}
-
-p {
-    color: #B7B6C2;
-    margin: 10px;
-    border: 2px solid black;
-    padding: 5px;
-}
-
-.texto-destaque {
-    color: #688B58;
-}
-
-.urgente {
-    color: red;
+    color: #22D4FD;
+    text-decoration: none;
 }
 
 .apresentacao {
+    padding: 5% 15%;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    /* height: 100vh; */
-    width: 100%;
-    padding: 6%;
+    justify-content: space-between;
 }
 
 .apresentacao__conteudo {
     width: 615px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.apresentacao__conteudo__titulo {
+    font-size: 36px;
+    font-family: 'Krona One', sans-serif;
+}
+
+.titulo-destaque {
+    color: #22D4FD;
 }
 
 .apresentacao__conteudo__texto {
@@ -93,32 +72,30 @@ p {
 }
 
 .apresentacao__links__link {
-    /* background-color: #52FFB8; */
+    /* background-color: #22D4FD; */
     display: flex;
     justify-content: center;
     gap: 16px;
-    border: 2px solid #52FFB8;
-    text-decoration: none;
-    font-size: 24px;
+    border: 2px solid #22D4FD;
     width: 378px;
     text-align: center;
     border-radius: 8px;
-    padding: 21.5px 0;
-    color: #B7B6C2;
-    font-family: 'Montserrat', sans-serif;
+    font-size: 24px;
     font-weight: 600;
+    padding: 21.5px 0;
+    text-decoration: none;
+    color: #F6F6F6;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .apresentacao__links__link:hover {
-    border: 2px solid #0000FF;
     background-color: #272727;
-    cursor: pointer;
 }
 
-.rodape__texto {
+.rodape {
     padding: 24px;
-    background-color: #22D4FD;
     color: #000000;
+    background-color: #22D4FD;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     font-size: 24px;
